# fragments

./: .gitignore  Cargo.toml  LICENSE  config.json.example
init_schema/: Cargo.toml
init_schema/src/: main.rs
src/: config.rs  db.rs  db_postgres.rs  handler.rs  main.rs  models.rs  templates.rs  verify.rs
static/css/: add_post.css  base.css  post.css
static/js/: loading.js  main.js  render.js  search.js
templates/: add_post.html  all_posts.html  base.html  date_posts.html  paginated_posts.html  post.html  preview_post.html  search_result.html  teapot.html
