[package]
name = "fragments"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono", "postgres"] }
tower-http = { version = "0.6.1", features = ["fs"] }
askama = "0.12.1"
askama_axum = "0.4.0"
pgp = "0.14.0"

[features]
